--- a/files/2/index.html
+++ b/files/2/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1</title>
+    <title>2</title>
 </head>
 
 <body>
     Hoi
     <p>
-        <a href="/2">Ga naar pagina 2</a>
+        <a href="/">Ga naar pagina 1<a>
     </p>
 </body>
 
