--- a/files/webapp/index.html
+++ b/files/webapp/index.html
@@ -5,14 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1</title>
+    <title>Hoi</title>
 </head>
 
 <body>
-    Hoi
-    <p>
-        <a href="/2">Ga naar pagina 2</a>
-    </p>
+    Ik laat je dit in plaats zien.
 </body>
 
 </html>
