--- a/files/webapp/index.html
+++ b/files/webapp/index.html
@@ -10,7 +10,6 @@
 
 <body>
     <iframe src="|url|$org"></iframe>
-    <!-- onload="onChange(this.contentWindow.location.href)" -->
 </body>
 
 <style>
@@ -21,28 +20,63 @@
         top: 0;
         left: 0;
         border: none;
+        transition: left 0.5s ease 0s;
     }
 </style>
 
 <script defer>
     let iframe = document.querySelector('iframe');
+    let oldLoc = iframe.src;
+
+    function wait(ms) {
+        return new Promise(res => {
+            setTimeout(res, ms)
+        })
+    }
 
     function iframeURLChange(iframe) {
         var unloadHandler = function () {
-            // Timeout needed because the URL changes immediately after
-            // the `unload` event is dispatched.
-            setTimeout(function () {
-                let oldLoc = iframe.contentWindow.location.href;
-                let newLoc = oldLoc;
-                console.log({ old: iframe.contentWindow.location.href })
-                if (!iframe.contentWindow.location.href.endsWith('$org')) {
-                    iframe.contentWindow.location.replace(iframe.contentWindow.location.href + '$org')
-                    newLoc = iframe.contentWindow.location.href + '$org'
+            setTimeout(async () => {
+                let loc = iframe.contentWindow.location.href;
+                if (!loc.endsWith('$org'))
+                    loc += '$org'
+
+                if (oldLoc == loc) {
+                    console.log('Unneeded page transition');
+                    return
                 }
 
-                setTimeout(() => {
-                    console.log({ new: iframe.contentWindow.location.href })
-                }, 50)
+                // window.frames[0].stop();
+                iframe.contentWindow.location.replace(oldLoc)
+
+                await wait(500)
+
+                oldLoc = loc
+                console.log(`Switching to ${loc}`)
+
+                let newIframe = document.createElement('iframe')
+                newIframe.style.left = '110vw'
+                newIframe.src = loc;
+                document.body.appendChild(newIframe)
+
+                await wait(100)
+
+                newIframe.style.left = 0;
+                iframe.style.left = '-110vw'
+
+                await wait(600)
+
+                iframe.contentWindow.location.replace(loc)
+                iframe.style.transition = 'none';
+
+                await wait(100)
+
+                iframe.style.left = null;
+                newIframe.remove()
+
+                await wait(100)
+
+                iframe.style.transition = null
             }, 0);
         };
 
