--- a/files/webapp/index.html
+++ b/files/webapp/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <iframe src="|url|$org" id="iframe1"></iframe>
+    <iframe src="|url|$org" id="iframe1" onload="changeTitle()"></iframe>
     <iframe src="about:blank" id="iframe2" style="display: none"></iframe>
 </body>
 
@@ -38,6 +38,10 @@
     let iframe = document.querySelector('iframe#iframe1');
     let oldLoc = iframe.src;
 
+    function changeTitle() {
+        document.title = iframe.contentDocument.title;
+    }
+
     function wait(ms) {
         return new Promise(res => {
             setTimeout(res, ms)
@@ -58,8 +62,6 @@
                     return
                 }
 
-                window.history.pushState(loc.split('$org')[0], loc.split('$org')[0], loc.split('$org')[0]);
-
                 let coverDiv = document.createElement('div')
                 coverDiv.classList.add('coverDiv')
                 document.body.appendChild(coverDiv)
@@ -74,7 +76,7 @@
                     head
 
                 oldIframe.style.zIndex = 100
-                // oldIframe.style.backgroundColor = 'white'
+                oldIframe.style.backgroundColor = 'white'
                 oldIframe.style.display = null
 
                 await wait(400)
@@ -109,6 +111,8 @@
                 await wait(100)
 
                 newIframe.remove()
+
+                window.history.pushState(loc.split('$org')[0], loc.split('$org')[0], loc.split('$org')[0]);
 
                 await wait(500)
 
