Fixed bugs and made backgrounds

--- a/files/2/index.html
+++ b/files/2/index.html
@@ -19,5 +19,10 @@
         window.location.replace('/')
     }
 </script>
+<style>
+    body {
+        background-color: greenyellow;
+    }
+</style>
 
 </html>
