--- a/files/index.html
+++ b/files/index.html
@@ -20,5 +20,10 @@
         window.location.replace('/2')
     }
 </script>
+<style>
+    body {
+        background-color: lightskyblue;
+    }
+</style>
 
 </html>
