--- a/files/webapp/index.html
+++ b/files/webapp/index.html
@@ -32,11 +32,22 @@
         height: 100vh;
         background-color: rgba(0, 0, 0, 0);
     }
+
+    #iframe2 {
+        background-color: white;
+        z-index: 100;
+    }
 </style>
 
 <script defer>
     let iframe = document.querySelector('iframe#iframe1');
     let oldLoc = iframe.src;
+
+    let oldIframe = document.getElementById('iframe2')
+    oldIframe.contentWindow.document.body.innerHTML =
+        iframe.contentWindow.document.body.innerHTML
+    oldIframe.contentWindow.document.head.innerHTML =
+        iframe.contentWindow.document.head.innerHTML
 
     function changeTitle() {
         document.title = iframe.contentDocument.title;
@@ -52,34 +63,35 @@
         var unloadHandler = function () {
             let body = iframe.contentWindow.document.body.innerHTML;
             let head = iframe.contentWindow.document.head.innerHTML;
+
+            let oldDisplay = oldIframe.style.display;
+            oldIframe.style.display = null
+
             setTimeout(async () => {
                 let loc = iframe.contentWindow.location.href;
                 if (!loc.endsWith('$org'))
                     loc += '$org'
 
                 if (oldLoc == loc) {
-                    console.log('Unneeded page transition');
+                    oldIframe.style.display = oldDisplay
                     return
                 }
+
+                if(oldIframe.contentWindow.document.body.innerHTML != body)
+                    oldIframe.contentWindow.document.body.innerHTML =
+                        body
+                if(oldIframe.contentWindow.document.head.innerHTML != head)
+                    oldIframe.contentWindow.document.head.innerHTML =
+                        head
+
+                oldIframe.style.display = null
 
                 let coverDiv = document.createElement('div')
                 coverDiv.classList.add('coverDiv')
                 document.body.appendChild(coverDiv)
 
-                await wait(100)
-
-                let oldIframe = document.getElementById('iframe2')
-
-                oldIframe.contentWindow.document.body.innerHTML =
-                    body
-                oldIframe.contentWindow.document.head.innerHTML =
-                    head
-
-                oldIframe.style.zIndex = 100
-                oldIframe.style.backgroundColor = 'white'
-                oldIframe.style.display = null
-
-                await wait(400)
+                // await wait(400)
+                // await wait(400)
 
                 iframe.style.display = 'none';
                 oldLoc = loc
@@ -90,6 +102,7 @@
                 newIframe.src = loc;
                 document.body.appendChild(newIframe)
 
+                // await wait(100)
                 await wait(100)
 
                 newIframe.style.left = 0;
@@ -112,10 +125,15 @@
 
                 newIframe.remove()
 
-                window.history.pushState(loc.split('$org')[0], loc.split('$org')[0], loc.split('$org')[0]);
+                if(window.location != loc.split('$org')[0])
+                    window.history.pushState(loc.split('$org')[0], loc.split('$org')[0], loc.split('$org')[0]);
 
-                await wait(500)
+                await wait(100)
 
+                oldIframe.contentWindow.document.body.innerHTML =
+                    iframe.contentWindow.document.body.innerHTML
+                oldIframe.contentWindow.document.head.innerHTML =
+                    iframe.contentWindow.document.head.innerHTML
                 coverDiv.remove()
             }, 0);
         };
@@ -132,6 +150,11 @@
     }
 
     iframeURLChange(iframe);
+
+    window.onpopstate = function(e){
+        console.log(e.state)
+        iframe.contentWindow.location.replace(e.state)
+    };
 </script>
 
 </html>
