Added ID to third iFrame

--- a/files/webapp/index.html
+++ b/files/webapp/index.html
@@ -115,6 +115,7 @@
                 let newIframe = document.createElement('iframe')
                 newIframe.style.left = '100vw'
                 newIframe.src = loc;
+                newIframe.id = 'iframe3'
                 document.body.appendChild(newIframe)
 
                 // await wait(100)
