--- a/files/webapp/index.html
+++ b/files/webapp/index.html
@@ -32,8 +32,11 @@
         height: 100vh;
         background-color: rgba(0, 0, 0, 0);
 
+        pointer-events: all;
         user-select: all;
         cursor: default;
+
+        z-index: 1000;
     }
 
     #iframe2 {
