--- a/files/index.html
+++ b/files/index.html
@@ -5,25 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1</title>
+    <title>Vakantie Barcelona</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Roboto&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 
 <body>
-    Hoi
-    <p>
-        Ga naar pagina 2
-    </p>
+    <div class="websiteName">
+        <div class="logo"></div>
+        <p>Barcelona</p>
+    </div>
+    <div class="menuBar">
+        <div style="margin-left: 2vw; text-decoration: underline;">
+            <a href="#">
+                Home
+            </a>
+        </div>
+        <div>
+            <a href="/spanje">
+                Spanje
+            </a>
+        </div>
+        <div>
+            <a href="/reis">
+                Reis
+            </a>
+        </div>
+        <div>
+            <a href="/activiteiten">
+                Activiteiten
+            </a>
+        </div>
+    </div>
+    <div class="background"></div>
+    <div class="information">
+        <div class="left"></div>
+        <div class="right"></div>
+    </div>
 </body>
-
-<script defer>
-    document.querySelector('p').onclick = () => {
-        window.location.replace('/2')
-    }
-</script>
-<style>
-    body {
-        background-color: lightskyblue;
-    }
-</style>
 
 </html>
