Changed extreme error page to fit style

--- a/files/error/reloading/index.html
+++ b/files/error/reloading/index.html
@@ -98,6 +98,11 @@
     </script>
 
     <style>
+        body {
+            margin: 0;
+            background-color: rgb(19, 126, 99);
+        }
+
         .textWrapper {
             width: 100%;
             height: fit-content;
@@ -118,7 +123,7 @@
         #bar {
             width: 75vw;
             height: 12vh;
-            background-color: rgb(189, 189, 189);
+            background-color: white;
 
             display: flex;
             justify-content: flex-start;
@@ -133,7 +138,7 @@
             height: 12vh;
             width: 0;
 
-            background-color: rgb(0, 226, 0);
+            background-color: rgb(26, 174, 138);
             transition: width 0.8s ease;
         }
 
