--- a/files/index.html
+++ b/files/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Roboto&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <script defer src="./index.js"></script>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
         <div class="logo"></div>
         <p>Barcelona</p>
     </div>
-    <div class="menuBar">
+    <div class="menuBar" id="menuBar">
         <div style="margin-left: 2vw; text-decoration: underline;">
             <a href="#">
                 Home
@@ -43,8 +44,64 @@
     </div>
     <div class="background"></div>
     <div class="information">
-        <div class="left"></div>
-        <div class="right"></div>
+        <div class="verticalSection">
+            <center>
+                <p class="title">
+                    Deze website
+                </p>
+            </center>
+            <p class="info">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ullam voluptates nisi. Veniam fugit eum
+                illum harum earum nostrum odio obcaecati itaque voluptatum provident! Tenetur quis inventore cum
+                cupiditate corrupti laboriosam, suscipit ullam similique officia minus assumenda eum. Cupiditate
+                asperiores fugit laudantium natus accusamus delectus recusandae itaque temporibus rerum, nisi eos neque
+                commodi iure nam saepe illo totam autem quae iusto mollitia quasi. Accusamus, at repudiandae quo ut,
+                veritatis sequi, voluptatum accusantium quasi numquam voluptatibus harum. Earum sunt, distinctio quae
+                error sequi, suscipit id quo similique excepturi voluptatem quasi eius maiores perferendis vero
+                temporibus dolor eaque, harum quaerat praesentium maxime odit nisi quia sint illum! Distinctio natus
+                rerum ullam odit, eligendi sit praesentium itaque eveniet quas dolor nihil incidunt omnis animi libero
+                voluptatibus possimus. Itaque rem totam nobis dolores assumenda id quae atque illum nam earum. Possimus
+                illo harum fugit cupiditate distinctio obcaecati at. Quia eos voluptatum consequuntur ipsum sequi eius
+                possimus sed sint, necessitatibus totam soluta repudiandae, minus quasi corrupti dicta distinctio ad
+                iste officia? Sint impedit explicabo laboriosam nesciunt doloribus quam consectetur odio perferendis,
+                non recusandae porro ut adipisci velit aspernatur beatae sunt nostrum similique repellendus corrupti in
+                voluptates obcaecati possimus, quo ipsum. Pariatur sapiente voluptas fugiat deleniti.
+            </p>
+        </div>
+        <div class="verticalSection">
+            <center>
+                <p class="title">
+                    Wie zijn wij?
+                </p>
+            </center>
+            <p class="info">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ullam voluptates nisi. Veniam fugit eum
+                illum harum earum nostrum odio obcaecati itaque voluptatum provident! Tenetur quis inventore cum
+                cupiditate corrupti laboriosam, suscipit ullam similique officia minus assumenda eum. Cupiditate
+                asperiores fugit laudantium natus accusamus delectus recusandae itaque temporibus rerum, nisi eos neque
+                commodi iure nam saepe illo totam autem quae iusto mollitia quasi. Accusamus, at repudiandae quo ut,
+                veritatis sequi, voluptatum accusantium quasi numquam voluptatibus harum. Earum sunt, distinctio quae
+                error sequi, suscipit id quo similique excepturi voluptatem quasi eius maiores perferendis vero
+                temporibus dolor eaque, harum quaerat praesentium maxime odit nisi quia sint illum! Distinctio natus
+                rerum ullam odit, eligendi sit praesentium itaque eveniet quas dolor nihil incidunt omnis animi libero
+                voluptatibus possimus. Itaque rem totam nobis dolores assumenda id quae atque illum nam earum. Possimus
+                illo harum fugit cupiditate distinctio obcaecati at. Quia eos voluptatum consequuntur ipsum sequi eius
+                possimus sed sint, necessitatibus totam soluta repudiandae, minus quasi corrupti dicta distinctio ad
+                iste officia? Sint impedit explicabo laboriosam nesciunt doloribus quam consectetur odio perferendis,
+                non recusandae porro ut adipisci velit aspernatur beatae sunt nostrum similique repellendus corrupti in
+                voluptates obcaecati possimus, quo ipsum. Pariatur sapiente voluptas fugiat deleniti.
+            </p>
+        </div>
+    </div>
+    <div id="nextButton" style="opacity: 0" onclick="window.open('/spanje', '_self')">
+        <div>
+            <p>
+                Volgende pagina
+            </p>
+        </div>
+        <div>
+            <div class="rightArrow"></div>
+        </div>
     </div>
 </body>
 
